--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 * {box-sizing: border-box;}
-body{background-color: #f3f3f3;}
+body{background-color: #f3f3f3;font-family: 'Roboto', sans-serif;}
 
 .header{background-color: white;height: 80px;width: 100%;position: fixed; top: 0px;left: 0px;box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);padding: 22px;}
 .header img{width: 75px;height:53px ;}
@@ -13,4 +13,7 @@ body{background-color: #f3f3f3;}
 .horario{color: #AAAAAA;}
 .negrito{font-weight: 700;}
 
-.input_box{background-color: white;height: 80px;width: 100%;position: fixed;bottom: 0px;left: 0px;box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);padding: 17px;}
+.input_box{background-color: white;height: 80px;width: 100%;position: fixed;bottom: 0px;left: 0px;box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);padding: 17px;display: flex;justify-content: space-between;align-items: center;}
+.input_box input{border: none; width: 100%;height: 40px;}
+.input_box input:focus-visible{outline: none;}
+.input_box ion-icon{font-size:26px;-webkit-tap-highlight-color: red;}
